<resources>
    <string name="app_name">Companion</string>
    <string name="text_onboarding_skip">Skip</string>
    <string name="text_login_enter_phone_number">Enter Phone Number</string>
    <string name="text_login_please_enter_phone_number">Please enter your number</string>
    <string name="text_login_enter_email_address">Enter Email Address</string>
    <string name="text_login_please_enter_email_address">Please enter your email address</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_email_address">Email Address</string>
    <string name="btn_request_otp">Request OTP</string>
    <string name="text_seconds">seconds</string>
    <string name="text_enter_otp">Enter OTP</string>
    <string name="text_code_mobile_verification">We have sent the code verification to your mobile number</string>
    <string name="text_code_email_verification">We have sent the code verification to your email address</string>
    <string name="btn_text_login">Login</string>
    <string name="text_did_not_get_code">Didn’t get the code?</string>
    <string name="text_resend_otp_in">Resend OTP in </string>
    <string name="text_resend_otp">Resend OTP</string>
    <string name="text_loading_dialog">Please wait…</string>
    <string name="text_no_internet_connection">No Internet Connection available</string>
    <string name="text_no_invalid_otp">Invalid OTP entered </string>
    <string name="error_message_select_country">Please select country</string>
    <string name="error_message_select_mobile">Please enter mobile number</string>
    <string name="error_message_invalid_mobile_number">Invalid number entered </string>
    <string name="error_message_invalid_email_address">Invalid email address entered </string>
    <string name="text_onboarding_title">Lets begin the journey to find most suitable companion for you..</string>
    <string name="text_onboarding_desc">Get ready to explore matches with astrological compatability. Our vedic science would help you find meaningful connections with the cosmic chemistry.</string>
    <string name="text_onboarding_gunamatch">Guna Match</string>
    <string name="text_reg_fill_details">Please fill in the details</string>
    <string name="text_reg_full_name">Full Name<font color='#E74C3C'>*</font></string>
    <string name="text_reg_gender_title">Gender<font color='#E74C3C'>*</font></string>
    <string name="text_reg_gender_male">Male</string>
    <string name="text_reg_gender_female">Female</string>
    <string name="text_reg_gender_other">Other</string>
    <string name="text_reg_birth_date">Birthdate<font color='#E74C3C'>*</font></string>
    <string name="text_reg_birth_time">Time of Birth<font color='#E74C3C'>*</font></string>
    <string name="text_reg_birth_city">City of Birth<font color='#E74C3C'>*</font></string>
    <string name="text_reg_community">Community<font color='#E74C3C'>*</font></string>
    <string name="text_reg_current_city">Current City<font color='#E74C3C'>*</font></string>
    <string name="text_submit_title">Submit</string>
    <string name="text_reg_full_name_warning">*Please enter your full name</string>
    <string name="text_reg_birth_time_warning">Note: If the birth time is unknown, Select it as 12:00 PM (noon) for astrological calculations. This is a common practice, though an exact birth time provides more accurate results.</string>
    <string name="text_upload_photo_warning">Note: Your profile is likely to be rejected if you don’t upload your real photo.</string>
    <string name="text_dashboard_home">Home</string>
    <string name="text_dashboard_message">Message</string>
    <string name="text_dashboard_top">Top</string>
    <string name="text_dashboard_interests">Interests</string>
    <string name="text_dashboard_profile">Profile</string>
    <string name="text_home_search">Search Here By Profile ID</string>
    <string name="text_message_search">Search Messages</string>
    <string name="text_home_shortlist">Shortlist</string>
    <string name="text_home_send_interest">Send Interest</string>
    <string name="text_home_chat">Chat</string>
    <string name="text_location_title">Location</string>
    <string name="text_location_sub_title">Please enable location access so \nwe could provide you accurate \nresults of nearest males &amp; females.</string>
    <string name="text_notification_title">Notifications</string>
    <string name="text_push_notification_title">Push Notifications</string>
    <string name="text_push_notification_sub_title">Notifications may include alerts, \nsounds and icon badges. These can \nbe configured settings.</string>
    <string name="text_proceed_title">Proceed</string>
    <string name="text_top_matches_title">Top Matches</string>
    <string name="text_interest_sentinterest">Sent Interest</string>
    <string name="text_interest_receivedinterest">Received Interest</string>
    <string name="text_interest_shortlisted">Shortlisted</string>
    <string name="text_interest_blockedlist">Blocked List</string>
    <string name="text_interest_declinedlist">Declined List</string>
    <string name="text_contactsupport_title">Support / Feedback</string>
    <string name="text_contactsupport_selectproblemtype">Please Select Problem Type</string>
    <string name="text_contactsupport_problemindetails">Please write your problem in details(optional)</string>
    <string name="text_contactsupport_attachscreenshot">Attach Screenshot (Optional)</string>
    <string name="text_next_title">Next</string>
    <string name="text_get_started">Get Started</string>
    <string name="text_profile_editmyprofile">Edit My Profile</string>
    <string name="text_profile_managemyphotos">Manage My Photos</string>
    <string name="text_profile_purchaseplans">Purchase Plans</string>
    <string name="text_profile_completekycdetails">Complete KYC Details</string>
    <string name="text_profile_contactsupport">Support / Feedback</string>
    <string name="text_profile_privacypolicy">Privacy Policy</string>
    <string name="text_profile_termsofuse">Terms Of Use</string>
    <string name="text_profile_deletedata">Request To Delete Data</string>
    <string name="text_profile_logout">Logout</string>
    <string name="text_about_title">About</string>
    <string name="text_about_yourself_title">About Yourself</string>
    <string name="text_about_yourself_hint">Please write about yourself here..</string>
    <string name="text_about_interest_title">Interest</string>
    <string name="text_about_interest_hint">Please write about your Interests…</string>
    <string name="text_about_expectations_title">Expectations</string>
    <string name="text_about_expectations_hint">Please write about your Expectations from your potential partner</string>
    <string name="text_save_title">Save</string>
    <string name="error_text_aboutyourself">Please enter about yourself</string>
    <string name="error_text_interest">Please enter interest</string>
    <string name="error_text_expectation">Please enter expectation</string>
    <string name="error_contains_contact_info">It seems some fields mention your contact details. Please remove them.</string>
    <string name="error_contains_contact_info_backend">Please remove contact details and save your profile.</string>
    <string name="text_basicdetails_title">Basic Details</string>
    <string name="text_basicdetails_selectyourstatus">Select Your Status</string>
    <string name="text_basicdetails_lookingfor">What are you looking for</string>
    <string name="text_basicdetails_height">Select your Height</string>
    <string name="text_basicdetails_religion">Select your Religion</string>
    <string name="text_basicdetails_community">Select your Community</string>
    <string name="text_basicdetails_city">Select your City</string>
    <string name="text_basicdetails_profession">Select your Profession</string>
    <string name="text_basicdetails_education">Select your Education</string>
    <string name="error_text_basicdetails_selectyourstatus">Please Select Your Status</string>
    <string name="error_text_basicdetails_lookingfor">Please Select Looking For</string>
    <string name="error_text_basicdetails_height">Please Select Your Height</string>
    <string name="error_text_basicdetails_religion">Please Select Your Religion</string>
    <string name="error_text_basicdetails_community">Please Select Your Community</string>
    <string name="error_text_basicdetails_city">Please Select Your City</string>
    <string name="error_text_basicdetails_profession">Please Select Your Profession</string>
    <string name="error_text_basicdetails_education">Please Select Your Education</string>
    <string name="text_mandatorydetails_title">Mandatory Details</string>
    <string name="text_fullname_warning">*Please enter your full name</string>
    <string name="text_updateprofile_title">Update Profile</string>
    <string name="text_something_went_wrong">Something went wrong, please try after sometime</string>
    <string name="error_text_fill_reg_details">Please fill mandatory details</string>
    <string name="error_text_birthdate">Please select birth date above 18 years</string>
    <string name="error_text_gender">Please select gender</string>
    <string name="error_text_birthtime">Please select birth time</string>
    <string name="error_text_birthcity">Please enter city of birth. </string>
    <string name="error_text_community">Please select community</string>
    <string name="error_text_current_city">Please select current city</string>
    <string name="btn_text_okay">OK</string>
    <string name="text_logged_out_title">Logged Out</string>
    <string name="text_logged_out_message">You are logged out because\n you logged in on \nanother device</string>
    <string name="text_profiledetails_gunamatch">Guna Match!</string>
    <string name="text_profiledetails_unlockcompleteanalysis">Unlock Complete Analysis</string>
    <string name="text_upgrademembership_unlockfeature">Upgrade your membership to unlock these features :</string>
    <string name="text_upgrademembership_featurechat">Chat</string>
    <string name="text_upgrademembership_feature_compatibilityanalysis">Compatibility Analysis</string>
    <string name="text_upgrademembership_upgradenow">Upgrade Now</string>
    <string name="text_upgrademembership_details">Your membership details are : </string>
    <string name="text_upgrademembership_subscriptionplan">Weekly Subscription Plan</string>
    <string name="text_upgrademembership_valid">Valid Till : 15th Dec 2024</string>
    <string name="text_purchaseplans_upgrademembership">Upgrade Membership</string>
    <string name="text_purchaseplans_needhelp">Need Help?</string>
    <string name="text_purchaseplans_compatabilityanalysis">Unlock Complete Compatability Analysis with our Guna Match (kundali match) based on Astrology and find your most suitable companion for healthier &amp; Happier relationship.</string>
    <string name="text_purchaseplans_matchmakingreport">Match Making Report</string>
    <string name="text_purchaseplans_ashtakootanalysis">1  -  Ashtaguna Analysis</string>
    <string name="text_purchaseplans_dashkootanalysis">2 -  Dashguna Analysis</string>
    <string name="text_purchaseplans_manglikanalysis">3 -  Manglik Analysis</string>
    <string name="text_purchaseplans_astrologydetails">4 -  Astrology Details</string>
    <string name="text_purchaseplans_specialplans">Special Plans</string>
    <string name="text_purchaseplans_specialplans_desc">Choose the right plan for you</string>
    <string name="text_purchaseplans_weekly_title">Weekly</string>
    <string name="text_purchaseplans_weekly_report">5 Match Making Report</string>
    <string name="text_purchaseplans_weekly_profileunlock">5 Profile Chats Unlock</string>
    <string name="text_purchaseplans_monthly_title">Monthly</string>
    <string name="text_edit">Edit</string>
    <string name="text_otp_digit">OTP Digit</string>
</resources>