<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/selector_bottom_nav_home"
        android:title="@string/text_dashboard_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/messageFragment"
        android:icon="@drawable/selector_bottom_nav_message"

        android:title="@string/text_dashboard_message" />
    <item
        android:id="@+id/topMatchesFragment"
        android:icon="@drawable/selector_bottom_nav_top"
        android:title="@string/text_dashboard_top" />
    <item
        android:id="@+id/interestsFragment"
        android:icon="@drawable/selector_bottom_nav_interests"
        android:title="@string/text_dashboard_interests" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/selector_bottom_nav_profile"
        android:title="@string/text_dashboard_profile" />

</menu>