<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".ui.otp.ui.verify.VerifyOtpActivity">

    <ImageView
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_160sdp"
        android:src="@drawable/companion_login_logo_white"
        app:layout_constraintBottom_toTopOf="@id/layoutOtpValidation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <LinearLayout
        android:id="@+id/layoutOtpValidation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_12sdp"
        android:paddingTop="@dimen/_6sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvEnterOtp"
            style="@style/TextFontPoppinsSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/text_enter_otp"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/tvOtpHint"
            style="@style/TextFontPoppinsRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/text_code_mobile_verification"
            android:textColor="@color/colorDesc1"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center">

            <TextView
                android:id="@+id/tvMobileNumber"
                style="@style/TextFontPoppinsMedium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                tools:text="+91 9960898943" />

            <ImageView
                android:id="@+id/ivEditMobileNumber"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:padding="@dimen/_4sdp"
                android:contentDescription="@string/text_edit"
                android:src="@drawable/ic_edit_mobile_number" />

        </LinearLayout>

        <com.goodiebag.pinview.Pinview
            android:id="@+id/otpView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:cursorVisible="true"
            app:forceKeyboard="false"
            android:autofillHints="smsOTPCode"
            android:importantForAutofill="yes"
            app:hint="0"
            app:inputType="number"
            app:password="false"
            app:pinBackground="@drawable/bg_rounded_outline"
            app:pinHeight="@dimen/_44sdp"
            app:pinLength="4"
            app:pinWidth="@dimen/_44sdp"
            app:textSize="@dimen/_6sdp"
            android:contentDescription="@string/text_otp_digit"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/primaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/btn_text_login"
            android:textAllCaps="false"
            android:textSize="@dimen/_14sdp"
            app:cornerRadius="@dimen/_20sdp" />

        <TextView
            style="@style/TextFontPoppinsRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:gravity="center"
            android:text="@string/text_did_not_get_code"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:id="@+id/layoutOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center">

            <TextView
                style="@style/TextFontPoppinsRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_resend_otp_in"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tvSeconds"
                style="@style/TextFontPoppinsMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>

        <TextView
            android:id="@+id/layoutResendOtp"
            style="@style/TextFontPoppinsRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/text_resend_otp"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/_16sdp"
            android:visibility="gone" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>