<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.updateProfile.ui.aboutYourself.ui.AboutFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clAboutYourself"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivAboutYourself"
                style="@style/ProfileImage"
                android:src="@drawable/ic_topmatches_aboutinfo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAboutYourself"
                style="@style/UpdateProfileText"
                android:text="@string/text_about_yourself_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivAboutYourself"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etAboutYourself"
                style="@style/UpdateProfileEditText"
                android:hint="@string/text_about_yourself_hint"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine|textCapSentences"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAboutYourself" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clInterests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clAboutYourself">

            <ImageView
                android:id="@+id/ivInterests"
                style="@style/ProfileImage"
                android:src="@drawable/ic_updateprofile_interest"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvInterests"
                style="@style/UpdateProfileText"
                android:text="@string/text_about_interest_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivInterests"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etInterests"
                style="@style/UpdateProfileEditText"
                android:hint="@string/text_about_interest_hint"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine|textCapSentences"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvInterests" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clExpectations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clInterests">

            <ImageView
                android:id="@+id/ivExpectations"
                style="@style/ProfileImage"
                android:src="@drawable/ic_updateprofile_expectations"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvExpectations"
                style="@style/UpdateProfileText"
                android:text="@string/text_about_expectations_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivExpectations"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etExpectations"
                style="@style/UpdateProfileEditText"
                android:hint="@string/text_about_expectations_hint"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine|textCapSentences"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvExpectations" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            style="@style/primaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/text_save_title"
            app:cornerRadius="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clExpectations" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>